# vi-dba

./: .gitignore  Dockerfile.linux  LICENSE  README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/editor/: AiRoutineEditor.vue  AiSqlEditor.vue  DataGrid.vue  ResultPane.vue  RoutineEditor.vue  RoutineList.vue  ScriptList.vue  SqlEditor.vue  TableEditor.vue  TableList.vue  TableView.vue  ViewEditor.vue
frontend/src/components/layout/: Sidebar.vue  SidebarTreeNode.vue  StatusBar.vue  Tabs.vue  Toolbar.vue  Workspace.vue
frontend/src/router/: index.ts
frontend/src/stores/: connections.ts  query.ts  session.ts  tabs.ts  ui.ts
frontend/src/types/: index.ts
frontend/src/utils/: sqlCompletion.ts  sqlFormatter.ts  sqlLinter.ts  sqlSnippets.ts
frontend/src/views/: ExportView.vue  HistoryDetailView.vue  HistoryView.vue  ImportView.vue  MainView.vue  SettingsView.vue  Welcome.vue
scripts/: build-dmg.sh  build-docker.ps1  build-docker.sh  build-linux.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config_manager.rs  db_manager.rs  history_manager.rs  lib.rs  models.rs  script_manager.rs  settings_manager.rs
src-tauri/src/ai/: ai_manager.rs  builtin_inference.rs  mod.rs
src-tauri/src/db/: mod.rs  mongo.rs  oracle.rs  postgres.rs  schema_cache_manager.rs  sqlite.rs  sqlserver.rs  utils.rs
src-tauri/src/db/mysql/: legacy.rs  mod.rs  v8.rs  v84.rs  version.rs
(+20 files in other folders)
