[package]
name = "ViDBA"
version = "0.5.2"
description = "A DB Viewer App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "any", "mysql", "postgres", "sqlite", "chrono", "json", "rust_decimal" ] }
rust_decimal = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.11"
urlencoding = "2.1.3"
async-trait = "0.1.89"
futures = "0.3"
bson = "2.10"
tiberius = { version = "0.12.3", features = ["chrono", "sql-browser-tokio"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
mongodb = "3.2.5"
rust_xlsxwriter = "0.92.3"
csv = "1.3"
calamine = "0.26"
sibyl = { version = "0.6.22", features = ["tokio"], optional = true }
candle-core = "0.8"
candle-transformers = "0.8"
candle-nn = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"

[features]
default = []
oracle = ["dep:sibyl"]
